--- a/workflows/live.yml
+++ b/workflows/live.yml
@@ -2,17 +2,17 @@ name: build-live-json
 
 on:
   schedule:
-    - cron: "*/5 * * * *"           # cada 5 min
+    - cron: "*/5 * * * *"   # cada 5 minutos
   workflow_dispatch:
   push:
     paths-ignore:
-      - "live.json"                 # evita bucles al commitear live.json
+      - "live.json"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write               # necesario para git push
+      contents: write
     steps:
       - uses: actions/checkout@v4
 
